# include_wit

./: Cargo.toml  README.md
crates/include_wit/: Cargo.toml
crates/include_wit/examples/: example.rs
crates/include_wit/examples/wit/: guest.wit
crates/include_wit/src/: lib.rs
crates/include_wit_macro/: Cargo.toml
crates/include_wit_macro/src/: lib.rs
